--- a/crates/assets-cli/Cargo.toml
+++ b/crates/assets-cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "assets-cli"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 assets-core = { path = "../assets-core" }
@@ -10,6 +10,8 @@ clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 rust_decimal = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["v4", "serde"] } # Added serde feature for Uuid
 dotenv = "0.15"
 serde_json = "1.0"
+comfy-table = "0.1" # Added comfy-table
+csv = "1.1" # Added csv
