--- a/crates/assets-core/Cargo.toml
+++ b/crates/assets-core/Cargo.toml
@@ -24,3 +24,5 @@ rust_decimal = { version = "1.0", features = ["serde"] }
 # Error handling
 anyhow = "1.0"
 thiserror = "2.0"
+async-trait = "0.1.88"
+csv = "1.3.1"
