--- a/crates/assets-core/Cargo.toml
+++ b/crates/assets-core/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1.0", features = ["full"] }
 # Serialization and utilities
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sha2 = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 rust_decimal = { version = "1.0", features = ["serde"] }
