--- a/crates/assets-cli/Cargo.toml
+++ b/crates/assets-cli/Cargo.toml
@@ -10,8 +10,12 @@ clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 rust_decimal = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.0", features = ["v4", "serde"] } # Added serde feature for Uuid
+uuid = { version = "1.0", features = [
+    "v4",
+    "serde",
+] } # Added serde feature for Uuid
 dotenv = "0.15"
 serde_json = "1.0"
 comfy-table = "0.1" # Added comfy-table
 csv = "1.1" # Added csv
+env_logger = "0.11" # Added env_logger for logging
