--- a/crates/assets-core/Cargo.toml
+++ b/crates/assets-core/Cargo.toml
@@ -32,3 +32,7 @@ encoding_rs = "0.8"
 regex = "1.10"
 dotenv = "0.15"
 futures = "0.3.31"
+log = { version = "0.4" }
+
+[dev-dependencies]
+env_logger = "0.11"
