--- a/crates/assets-cli/Cargo.toml
+++ b/crates/assets-cli/Cargo.toml
@@ -3,8 +3,14 @@ name = "assets-cli"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+demo = []
+
 [dependencies]
 assets-core = { path = "../assets-core" }
+
+
 tokio = { version = "1.0", features = ["full"] }
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
@@ -19,3 +25,6 @@ serde_json = "1.0"
 comfy-table = "0.1" # Added comfy-table
 csv = "1.1" # Added csv
 env_logger = "0.11" # Added env_logger for logging
+
+[target.'cfg(feature = "demo")'.dependencies]
+assets-demo = { path = "../assets-demo" }
