--- a/crates/assets-demo/Cargo.toml
+++ b/crates/assets-demo/Cargo.toml
@@ -7,3 +7,4 @@ edition.workspace = true
 assets-core = { path = "../assets-core" }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
+anyhow = "1.0"
