--- a/crates/assets-core/Cargo.toml
+++ b/crates/assets-core/Cargo.toml
@@ -33,6 +33,7 @@ regex = "1.10"
 dotenv = "0.15"
 futures = "0.3.31"
 log = { version = "0.4" }
+bon = { version = "3.6" }
 
 [dev-dependencies]
 env_logger = "0.11"
