--- a/crates/assets-demo/Cargo.toml
+++ b/crates/assets-demo/Cargo.toml
@@ -8,3 +8,5 @@ assets-core = { path = "../assets-core" }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 anyhow = "1.0"
+chrono = "0.4.41"
+rust_decimal = "1.37.2"
