clippy with strict mode...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ members = ["crates/assets-core", "crates/assets-cli", "crates/assets-demo"]
 
 [workspace.package]
 edition = "2021"
+
+[workspace.lints.clippy]
+# Deny all clippy warnings (strict mode)
+all = "deny"
