--- a/crates/assets-cli/Cargo.toml
+++ b/crates/assets-cli/Cargo.toml
@@ -25,3 +25,6 @@ serde_json = "1.0"
 comfy-table = "0.1" # Added comfy-table
 csv = "1.1" # Added csv
 env_logger = "0.11" # Added env_logger for logging
+
+[lints]
+workspace = true
