--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 members = ["crates/assets-core", "crates/assets-cli", "crates/assets-demo"]
-
+default-members = ["crates/assets-cli", "crates/assets-core"]
 [workspace.package]
 edition = "2021"
 
