--- a/crates/assets-cli/Cargo.toml
+++ b/crates/assets-cli/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0"
 comfy-table = "0.1" # Added comfy-table
 csv = "1.1" # Added csv
 env_logger = "0.11" # Added env_logger for logging
+clap_complete = "4.5.54"
 
 [lints]
 workspace = true
