--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -81,13 +81,15 @@ jobs:
       env:
         TESTCONTAINERS_RYUK_DISABLED: true
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v5
       with:
-        file: ./cobertura.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: nschoonbroodt/rusty-assets
+        files: ./cobertura.xml
         flags: unittests
         name: codecov-umbrella
-        fail_ci_if_error: false  # Don't fail CI if Codecov upload fails
+        fail_ci_if_error: false
         verbose: true
 
     - name: Upload coverage report as artifact
