--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -79,7 +79,7 @@ jobs:
       run: cargo install cargo-llvm-cov
 
     - name: Generate coverage report
-      run: cargo llvm-cov --workspace --codecov --output-path codecov.json
+      run: cargo llvm-cov --workspace --cobertura --output-path ./cobertura.xml
       env:
         TESTCONTAINERS_RYUK_DISABLED: true
 
