--- a/crates/assets-core/Cargo.toml
+++ b/crates/assets-core/Cargo.toml
@@ -34,6 +34,7 @@ dotenv = "0.15"
 futures = "0.3.31"
 log = { version = "0.4" }
 bon = { version = "3.6" }
+pdf-extract = "0.9.0"
 
 [dev-dependencies]
 env_logger = "0.11"
